assets/deployments/notification/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
  - name: http
    protocol: TCP
    port: 8040
    targetPort: 8040
  #type: LoadBalancer
