assets/deployments/notification/notification-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notification
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/request-modifier: "ReplacePathRegex:/api-documentation/notification/ /alerts/api-docs"
spec:
  rules:
    - host: --DNS_NAME--
      http:
        paths:
          - path: /alerts/
            backend:
              serviceName: notification
              servicePort: 8040

          - path: /socket.io/
            backend:
              serviceName: notification
              servicePort: 8040

          - path: /users
            backend:
              serviceName: notification
              servicePort: 8040

          - path: /notifications
            backend:
              serviceName: notification
              servicePort: 8040

          - path: /notifications/
            backend:
              serviceName: notification
              servicePort: 8040

          - path: /api-documentation/notification/
            backend:
              serviceName: notification
              servicePort: 8040

          - path: /notification/health
            backend:
              serviceName: notification
              servicePort: 8040
